--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -19,6 +20,31 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".detailList"
+            android:exported="false" />
+        <activity
+            android:name=".Detail"
+            android:exported="false"
+            android:label="@string/title_activity_detail"
+            android:theme="@style/Theme.MyApplication" />
+        <activity
+            android:name=".BatchDetailActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".MapsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BatchListActivity"
+            android:exported="false"
+            android:label="@string/title_activity_batch_list"
+            android:theme="@style/Theme.MyApplication" />
+        <activity
+            android:name=".BatchDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DisplayActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -27,6 +53,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCL7nqyTwHdX_FIBdHDq1oCRly8zvMEygw" />
     </application>
 
 </manifest>
